@@ -1,3 +1,6 @@
+[22.December 2008]
+- spritemanager.rb: SpriteManager#update removed, #each added
+
 [19.December 2008]
 - spritesheet.rb: simple support for spritesheets
 - animation.rb: fixed one ancient error
